--- a/css/style.css
+++ b/css/style.css
@@ -2992,7 +2992,7 @@ Back To Top Section
  */
 .banner-page {
   padding: 100px 0;
-  background: url("../images/1920x1300.jpg") bottom center no-repeat;
+  background: url("https://res.cloudinary.com/doeugmx1i/image/upload/c_fill,w_1920,h_1300/v1751658614/about-as-service-contact-information-concept_1_1_1_xtavf4.jpg") bottom center no-repeat;
   background-attachment: fixed;
   background-size: cover; }
 
